objects/kugo2p__OrderInvoiceRelationship__c.object
<CustomObject>
    <description>Kugamon - Junction object that ties an Invoice record to its related Order.</description>
    <fields>
        <fullName>kugo2p__InvoiceAmount__c</fullName>
        <formula>kugo2p__Invoice__r.kugo2p__TotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceDate__c</fullName>
        <formula>kugo2p__Invoice__r.kugo2p__InvoiceDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceLines__c</fullName>
        <formula>kugo2p__Invoice__r.kugo2p__Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Line Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kugo2p__InvoiceStatus__c</fullName>
        <formula>kugo2p__Invoice__r.kugo2p__RecordStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>kugo2p__KugamonInvoice__c</referenceTo>
        <relationshipLabel>Related Orders</relationshipLabel>
        <relationshipName>Related_Sales_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>kugo2p__OrderStatus__c</fullName>
        <formula>kugo2p__SalesOrder__r.kugo2p__RecordStatus__c</formula>
        <label>Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrderAmount__c</fullName>
        <formula>kugo2p__SalesOrder__r.kugo2p__TotalAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kugo2p__SalesOrder__c</fullName>
        <label>Order</label>
        <referenceTo>kugo2p__SalesOrder__c</referenceTo>
        <relationshipLabel>Related Invoices</relationshipLabel>
        <relationshipName>Related_Invoices</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Order/Invoice Relationship</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order/Invoice Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>